--- a/src/kmr_concatenator/CMakeLists.txt
+++ b/src/kmr_concatenator/CMakeLists.txt
@@ -31,6 +31,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_msgs REQUIRED)
+find_package(tf2_sensor_msgs REQUIRED)
 
 find_package(eigen3_cmake_module REQUIRED)
 find_package(Eigen3 REQUIRED)
