--- a/src/kmr_concatenator/package.xml
+++ b/src/kmr_concatenator/package.xml
@@ -26,6 +26,7 @@
   <depend>sensor_msgs</depend>
   <depend>tf</depend>
   <depend>tf2</depend>
+  <depend>tf2_sensor_msgs</depend>
 
   <build_depend>tf2_geometry_msgs</build_depend>
   
