--- a/src/kmr_slam_toolbox/package.xml
+++ b/src/kmr_slam_toolbox/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>kmr_slam_toolbox</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Implements SLAM_toolbox into the KMR system with the help of kmr_concatenator.</description>
   <maintainer email="mortenmdahl@outlook.com">morten</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache Lisence 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
