--- a/src/kmr_navigation2/param/param_foxy.yaml
+++ b/src/kmr_navigation2/param/param_foxy.yaml
@@ -137,8 +137,8 @@ local_costmap:
       robot_base_frame: base_link
       use_sim_time: False
       global_frame: odom
-      plugin_names: ["obstacle_layer", "voxel_layer", "inflation_layer"]
-      plugin_types: ["nav2_costmap_2d::ObstacleLayer", "nav2_costmap_2d::VoxelLayer", "nav2_costmap_2d::InflationLayer"]
+      plugin_names: ["obstacle_layer", "inflation_layer"] #"voxel_layer",
+      plugin_types: ["nav2_costmap_2d::ObstacleLayer", "nav2_costmap_2d::InflationLayer"] #"nav2_costmap_2d::VoxelLayer",
       rolling_window: true
       width: 4
       height: 4
@@ -149,46 +149,46 @@ local_costmap:
         inflation_radius: 0.9 #1.2
       obstacle_layer:
         enabled: True
-        observation_sources: scan_1 scan_2
-        scan_1:
-          topic: /scan
+        observation_sources: scan_concatenated
+        scan_concatenated:
+          topic: /scan_concatenated
           max_obstacle_height: 2.0
           clearing: True
           marking: True
           data_type: "LaserScan"
-        scan_2:
-          topic: /scan_2
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "LaserScan"
-      voxel_layer:
-        enabled: True
-        publish_voxel_map: True
-        origin_z: 0.0
-        z_resolution: 0.2
-        z_voxels: 10
-        max_obstacle_height: 2.0
-        mark_threshold: 0
-        observation_sources: points2_1 points2_2 points2_3
-        points2_1:
-          topic: /points2_1
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "PointCloud2"
-        points2_2:
-          topic: /points2_2
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "PointCloud2"
-        points2_3:
-          topic: /points2_3
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "PointCloud2"
+#        scan_2:
+#          topic: /scan_2
+#          max_obstacle_height: 2.0
+#          clearing: True
+#          marking: True
+#          data_type: "LaserScan"
+#      voxel_layer:
+#        enabled: True
+#        publish_voxel_map: True
+#        origin_z: 0.0
+#        z_resolution: 0.2
+#        z_voxels: 10
+#        max_obstacle_height: 2.0
+#        mark_threshold: 0
+#        observation_sources: points2_1 points2_2 points2_3
+#        points2_1:
+#          topic: /points2_1
+#          max_obstacle_height: 2.0
+#          clearing: True
+#          marking: True
+#          data_type: "PointCloud2"
+#        points2_2:
+#          topic: /points2_2
+#          max_obstacle_height: 2.0
+#          clearing: True
+#          marking: True
+#          data_type: "PointCloud2"
+#        points2_3:
+#          topic: /points2_3
+#          max_obstacle_height: 2.0
+#          clearing: True
+#          marking: True
+#          data_type: "PointCloud2"
       static_layer:
         map_subscribe_transient_local: True
       always_send_full_costmap: True
@@ -204,11 +204,11 @@ global_costmap:
     ros__parameters:
       update_frequency: 1.0
       publish_frequency: 1.0
+      use_sim_time: False
       robot_base_frame: base_link
       global_frame: map
-      use_sim_time: False
-      plugin_names: ["static_layer", "obstacle_layer", "voxel_layer", "inflation_layer"]
-      plugin_types: ["nav2_costmap_2d::StaticLayer", "nav2_costmap_2d::ObstacleLayer", "nav2_costmap_2d::VoxelLayer", "nav2_costmap_2d::InflationLayer"]
+      plugin_names: ["static_layer", "obstacle_layer", "inflation_layer"] # "voxel_layer"
+      plugin_types: ["nav2_costmap_2d::StaticLayer", "nav2_costmap_2d::ObstacleLayer", "nav2_costmap_2d::InflationLayer"] # "nav2_costmap_2d::VoxelLayer",|
       robot_radius: 0.626
       resolution: 0.05
       inflation_layer:
@@ -216,46 +216,40 @@ global_costmap:
         inflation_radius: 0.9 #1.2
       obstacle_layer:
         enabled: True
-        observation_sources: scan_1 scan_2
-        scan_1:
-          topic: /scan
+        observation_sources: scan_concatenated
+        scan_concatenated:
+          topic: /scan_concatenated
           max_obstacle_height: 2.0
           clearing: True
           marking: True
           data_type: "LaserScan"
-        scan_2:
-          topic: /scan_2
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "LaserScan"
-      voxel_layer:
-        enabled: True
-        publish_voxel_map: True
-        origin_z: 0.0
-        z_resolution: 0.2
-        z_voxels: 10
-        max_obstacle_height: 2.0
-        mark_threshold: 0
-        observation_sources: 
-        points2_1:
-          topic: /points2_1
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "PointCloud2"
-        points2_2:
-          topic: /points2_2
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "PointCloud2"
-        points2_3:
-          topic: /points2_3
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "PointCloud2"
+#      voxel_layer:
+#        enabled: True
+#        publish_voxel_map: True
+#        origin_z: 0.0
+#        z_resolution: 0.2
+#        z_voxels: 10
+#        max_obstacle_height: 2.0
+#        mark_threshold: 0
+#        observation_sources: 
+#        points2_1:
+#          topic: /points2_1
+#          max_obstacle_height: 2.0
+#          clearing: True
+#          marking: True
+#          data_type: "PointCloud2"
+#        points2_2:
+#          topic: /points2_2
+#          max_obstacle_height: 2.0
+#          clearing: True
+#          marking: True
+#          data_type: "PointCloud2"
+#        points2_3:
+#          topic: /points2_3
+#          max_obstacle_height: 2.0
+#          clearing: True
+#          marking: True
+#          data_type: "PointCloud2"
       static_layer:
         map_subscribe_transient_local: True
       always_send_full_costmap: True
@@ -269,7 +263,7 @@ global_costmap:
 map_server:
   ros__parameters:
     use_sim_time: False
-    yaml_filename: "turtlebot3_world.yaml"
+    yaml_filename: "GAZEBO.yaml"
 
 planner_server:
   ros__parameters:
