fixed kmr_moveit2 build error due to missing kmr_manipulator dependancy and changed remotePC address

--- a/src/kmr_moveit2/package.xml
+++ b/src/kmr_moveit2/package.xml
@@ -22,6 +22,7 @@
   <build_depend>tf2</build_depend>
   <exec_depend>tf2</exec_depend>
   <depend>kmr_msgs</depend>
+  <depend>kmr_manipulator</depend>
   <depend>rclcpp_action</depend>
 
   <export>
